<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="@string/pref_checkbox1_key"
        android:title="@string/disable_cgpa"
        android:summary="@string/disable_cgpa_description"
        android:defaultValue="false"
        android:textColor="@color/black"/>

    <ListPreference
        android:title="@string/pref_level_title"
        android:key="@string/pref_level_key"
        android:textColor="@color/black"


        />
    <Preference android:title="@string/pref_change_password"
        android:key="@string/pref_password_key"
        android:summary="@string/pref_password_summary"
       />
    <Preference android:title="@string/pref_change_email"
        android:key="@string/pref_email_key"
        android:summary="@string/pref_email_summary"

    />
    <PreferenceCategory
        android:title="@string/data_section"
        >

        <Preference android:title="@string/delete_grades_title"
            android:summary="@string/delete_grades_summary"
            android:key="@string/pref_delete_grades_key"
            />
        <Preference android:title="@string/delete_account_title"
            android:summary="@string/delete_account_summary"
            android:key="@string/pref_delete_user_key"
        />




    </PreferenceCategory>


</PreferenceScreen>