<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:tools="http://schemas.android.com/tools"
	tools:showIn="@layout/feedback_header"
    android:layout_marginTop="60dp">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedbacktitle"
        android:textColor="@color/black"
        android:textSize="10pt" >
	</TextView>

	<EditText
	    android:id="@+id/edit_text_name"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:hint="@string/feedbackname"
	    android:inputType="textPersonName"
	    android:textColorHint="@color/blue" >
</EditText>

<EditText
    android:id="@+id/edit_text_email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:hint="@string/feedbackemail"
    android:inputType="textEmailAddress"
    android:textColorHint="@color/blue" >

</EditText>

<Spinner
    android:id="@+id/spinner_feedback"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp" >
</Spinner>

<EditText
    android:id="@+id/edit_text_feedbackbody"
    android:layout_width="match_parent"
    android:layout_height="77dp"
    android:hint="@string/feedbackbody"
    android:inputType="textMultiLine"
    android:lines="5"
    android:textColorHint="@color/blue" >
</EditText>
<CheckBox
    android:id="@+id/checkbox_response"
    android:layout_height="wrap_content"
    android:text="@string/feedbackresponse"
    android:layout_width="match_parent">
</CheckBox>
<Button
    android:id="@+id/button_send_feedback"
    android:layout_height="wrap_content"
    android:text="@string/feedbackbutton"
    android:layout_marginTop="7dp"
    android:textColor="@color/white"
    android:background="@color/ui_component_color"
    android:layout_width="match_parent">
</Button>

</LinearLayout>
</ScrollView>
